Fixed vertical alignment of title in moz.

--- a/app/jslib/jqtouch/themes/apple/theme.css
+++ b/app/jslib/jqtouch/themes/apple/theme.css
@@ -1502,7 +1502,7 @@ div.spinner div.bar12 {-webkit-transform:rotate(330deg) translate(0, -142%); -we
     color: #222;
     list-style-type: none;
     padding: 10px;
-    line-height: 23px;
+    line-height: 43px;
     -webkit-transform: translate3d(0,0,0); /* expensive way to avoid flickr */
     min-height: 44px;
 }
